# FlatScrap

./: .gitignore  Dockerfile  README.md  cronfile  docker-compose.yml  pyproject.toml  requirements.txt
flatscrap/: manage.py  requirements.txt
flatscrap/flatscrap/: asgi.py  settings.py  urls.py  wsgi.py
flatscrap/streamlit/: scraper_streamlit.py
flatscrap/tecnocasa/: apps.py  models.py  scraper_streamlit.py  tests.py  urls.py  views.py
flatscrap/tecnocasa/management/commands/: pisostream.py  tecnopiso.py
flatscrap/tecnocasa/migrations/: 0001_initial.py
flatscrap/tecnocasa/services/: bas.py  pisoscrape.py  pisoscrapeChrome.py
