[project]
name = "flatscrap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "mysqlclient>=2.2.7",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "streamlit>=1.43.2",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
